--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -16,8 +16,10 @@
     rebase-onto = "!f() { base=$(git merge-base "$1" "$2"); git rebase --onto "$1" "$base" "$2"; }; f"
 [init]
     defaultBranch = master
-[credential]
-    helper = store
+{{ if eq .chezmoi.os "darwin" -}}
+[gpg]
+    program = /opt/homebrew/bin/gpg
+{{ end -}}
 [commit]
 	gpgsign = true
 [tag]
